--- a/src/global.css
+++ b/src/global.css
@@ -81,7 +81,6 @@ header {
   justify-content: space-between;
   background: #222;
   color: #fff;
-  font-size: 0.8rem;
   padding: 0.5rem;
   color: #ffa500;
 }
@@ -118,6 +117,7 @@ header span:first-of-type i {
 }
 
 #root #meta {
+  margin-top: 5px;
   color: #666;
 }
 
@@ -190,6 +190,10 @@ footer {
     width: 100%;
   }
 
+  main header {
+    font-size: 1.15rem;
+  }
+
   #root #user .img-wrapper {
     height: 70px;
     width: 70px;
@@ -224,7 +228,7 @@ footer {
 
 #loader:before,
 #loader:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
 }
