--- a/src/global.css
+++ b/src/global.css
@@ -107,7 +107,7 @@ header span:first-of-type i {
 
 #root ol li {
   font-size: 0.85rem;
-  padding: 0.5rem 1rem 0.5rem 0;
+  padding: 0 1.25rem 1rem 0;
 }
 
 #root #title {
@@ -119,14 +119,13 @@ header span:first-of-type i {
 }
 
 #root #meta {
-  margin-top: 5px;
   font-size: 0.85rem;
   color: #666;
 }
 
 /* Comments */
 #root #post-title {
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   padding-bottom: 1.5rem;
 }
 
