--- a/src/global.css
+++ b/src/global.css
@@ -70,7 +70,7 @@ dt {
   Amp.js http Demo Stylesheet
 */
 main {
-  width: 90%;
+  width: 85%;
   max-width: 1280px;
   margin: 0 auto;
   background: #f7f7f7;
@@ -79,10 +79,10 @@ main {
 header {
   display: flex;
   justify-content: space-between;
-  background: #222;
+  background: #ff6600;
   color: #fff;
-  padding: 0.5rem;
-  color: #ffa500;
+  padding: 0.25rem;
+  color: #000;
   font-size: 0.8rem;
 }
 
@@ -96,7 +96,9 @@ header span:first-of-type {
 
 header span:first-of-type i {
   font-style: normal;
-  border: 1px solid #ffa500;
+  font-weight: normal;
+  border: 1px solid #fff;
+  color: #fff;
 }
 
 #loading {
@@ -197,7 +199,7 @@ footer {
   justify-content: space-between;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 750px) {
   body {
     margin: 0;
     padding: 0;
@@ -241,7 +243,7 @@ footer {
 
 #loader:before,
 #loader:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
 }
