--- a/src/style.scss
+++ b/src/style.scss
@@ -150,3 +150,54 @@ amp-error {
     font-weight: bold !important;
   }
 }
+
+amp-feed-page {
+  display: block;
+  padding-top: 1.5em;
+
+  amp-post-item {
+    display: block;
+    position: relative;
+    padding: 0 0 0 4em;
+    margin: 0 0 1.5em 0;
+
+    h2 {
+      font-size: 1em;
+      font-weight: 500;
+      margin: 0;
+      padding: 2px 0 0 0;
+      line-height: 1.2;
+
+      a {
+        text-decoration: none;
+      }
+
+      small {
+        color: $off-black;
+        font-weight: 300;
+      }
+    }
+
+    p.muted {
+      font-size: 0.8em;
+      font-weight: 300;
+      color: $off-black;
+
+      * {
+        color: $off-black;
+      }
+    }
+
+    .index {
+      position: absolute;
+      color: $off-black;
+      font-weight: 200;
+      left: 0.2em;
+      top: 0.15em;
+      text-align: right;
+      font-size: 1.6em;
+      width: 0.75em;
+      line-height: 1;
+    }
+  }
+}
