--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,15 @@ $light-orange: #ffdac1;
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -166,7 +175,6 @@ amp-feed-page {
       font-weight: 500;
       margin: 0;
       padding: 2px 0 0 0;
-      line-height: 1.2;
 
       a {
         text-decoration: none;
@@ -178,7 +186,8 @@ amp-feed-page {
       }
     }
 
-    p.muted {
+    p.meta {
+      margin-top: 0.5em;
       font-size: 0.8em;
       font-weight: 300;
       color: $off-black;
@@ -193,11 +202,35 @@ amp-feed-page {
       color: $off-black;
       font-weight: 200;
       left: 0.2em;
-      top: 0.15em;
+      top: 0.05em;
       text-align: right;
       font-size: 1.6em;
       width: 0.75em;
       line-height: 1;
     }
+  }
+}
+
+amp-commments-page {
+  display: block;
+
+  h1 {
+    font-weight: 500 !important;
+    a {
+      text-decoration: none;
+    }
+  }
+
+  .meta {
+    font-size: 0.8em;
+    font-weight: 200;
+
+    * {
+      color: $off-black;
+    }
+  }
+
+  .body {
+    padding-top: 1em;
   }
 }
