--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,26 @@
 /* amp-js Reddit Client CSS */
-$black: #333;
-$off-black: #666;
-$white: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap&text=%26');
+
+:root {
+  --bg: white;
+  --fg: #333;
+  --fg-light: #666;
+  --bar: rgba(0, 0, 0, 0.1);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: #333;
+    --fg: #eee;
+    --fg-light: #aaa;
+    --bar: rgba(255, 255, 255, 0.1);
+  }
+}
+
 $off-white: #f4f4f4;
 $offest-white: #eee;
 $orange: #ff6600;
 $light-orange: #ffdac1;
-$orange-bg: hsla(24, 100%, 50%, 0.051);
 
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -27,29 +41,19 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  color: $black;
+  color: var(--fg);
+  background: var(--bg);
   font-size: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   line-height: 1.5;
+  transition: background-color 0.6s;
 }
 
 blockquote {
   border-left: 0.25em solid $offest-white;
   padding-left: 1em;
   margin-left: 0em;
-}
-
-button,
-.button {
-  background: $white;
-  $color: $orange;
-  border: 2px solid $orange;
-  color: $orange;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  font-weight: bold;
-  text-decoration: none;
 }
 
 amp-progress {
@@ -85,20 +89,23 @@ amp-navbar {
     flex-direction: row;
     align-items: center;
     border-bottom: 1px solid $orange;
-    background: $orange-bg;
     padding: 0 1em;
 
     .icon {
-      font-size: 2.5em;
+      font-size: 2em;
       position: absolute;
-      margin: 0 0 0 0.25em;
       text-align: center;
-      font-family: monospace;
-      -webkit-text-stroke: $orange 3px;
-      color: $white;
+      background: $orange;
+      color: white;
       pointer-events: none;
       cursor: default;
-      font-weight: bold;
+      border-radius: 100px;
+      height: 35px;
+      width: 35px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Lato', sans-serif;
     }
 
     ul {
@@ -119,7 +126,7 @@ amp-navbar {
   }
 
   a {
-    color: $off-black;
+    color: var(--fg-light);
     text-decoration: none;
     padding: 1em 0.5em;
     display: block;
@@ -128,7 +135,7 @@ amp-navbar {
     &.active {
       position: relative;
       display: inline-block;
-      color: $black;
+      color: var(--fg);
 
       &::after {
         position: absolute;
@@ -156,7 +163,7 @@ amp-navbar {
 }
 
 a {
-  color: $black;
+  color: var(--fg);
   text-decoration: underline;
 }
 
@@ -191,7 +198,7 @@ amp-feed-page {
       }
 
       small {
-        color: $off-black;
+        color: var(--fg-light);
         font-weight: 300;
       }
     }
@@ -200,16 +207,16 @@ amp-feed-page {
       margin-top: 0.6em;
       font-size: 0.8em;
       font-weight: 300;
-      color: $off-black;
+      color: var(--fg-light);
 
       * {
-        color: $off-black;
+        color: var(--fg-light);
       }
     }
 
     .index {
       position: absolute;
-      color: $off-black;
+      color: var(--fg-light);
       font-weight: 200;
       left: 0.2em;
       top: 0.05em;
@@ -225,7 +232,7 @@ amp-commments-page {
   display: block;
 
   .item {
-    border-bottom: 1em solid $off-white;
+    border-bottom: 1em solid var(--bar);
     margin: 0 -2em 2em;
     padding: 0 2em 2em;
 
@@ -249,7 +256,7 @@ amp-commments-page {
       font-weight: 300;
 
       * {
-        color: $off-black;
+        color: var(--fg-light);
       }
     }
 
@@ -261,14 +268,18 @@ amp-commments-page {
 
 amp-replies {
   display: block;
-  border-top: 1px solid $offest-white;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
   padding: 1em 0 0;
+
+  &:first-child {
+    border-top: none;
+  }
 
   .meta {
     &,
     * {
       font-size: 14px;
-      color: $off-black;
+      color: var(--fg-light);
     }
   }
 
@@ -283,6 +294,34 @@ amp-replies {
   @media (min-width: 720px) {
     .children {
       padding: 0 0 0 2em;
+    }
+  }
+}
+
+amp-theme {
+  button {
+    position: fixed;
+    right: 1em;
+    bottom: 1em;
+    width: 2em;
+    height: 2em;
+    text-indent: -9999px;
+    background-color: transparent;
+    border: none;
+    opacity: 0.4;
+    outline: 0;
+
+    svg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      right: 0;
+      bottom: 0;
+
+      path {
+        fill: var(--fg) !important;
+        transition: opacity 0.6s;
+      }
     }
   }
 }
